# oficina2-poc

./: .gitignore  README.md
Basic3D/: .gitignore  Makefile
Basic3D/src/: main.cpp
SmallPlatformer/: Makefile  README.md  build.bat  run.sh
SmallPlatformer/res/scripts/: Player.lua  Player.scm
SmallPlatformer/src/: main.cpp
SonicGame/: .gitignore  CMakeLists.txt  Makefile  Makefile.windows  README.md  run.bat  run.sh
SonicGame/res/: GameCharacter.scm
SonicGame/res/scripts/: player.lua  player.scm
SonicGame/src/: GameScreen.cpp  GameScreen.hpp  MenuScreen.cpp  MenuScreen.hpp  main.cpp
TennisForTwo/: .gitignore  CMakeLists.txt
TennisForTwo/src/: main.cpp
